@@ -4,9 +4,6 @@
  */
 package io.strimzi.certs;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileInputStream;
@@ -16,7 +13,9 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.security.KeyStore;
@@ -28,6 +27,9 @@ import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import static java.util.Arrays.asList;
 
@@ -53,17 +55,12 @@ public class OpenSslCertManager implements CertManager {
                 "-out", certFile.getAbsolutePath(), "-keyout", keyFile.getAbsolutePath()));
 
         File sna = null;
-        File openSslConf = null;
         if (sbj != null) {
 
             if (sbj.subjectAltNames() != null && sbj.subjectAltNames().size() > 0) {
 
                 // subject alt names need to be in an openssl configuration file
-                InputStream is = getClass().getClassLoader().getResourceAsStream("openssl.conf");
-                openSslConf = File.createTempFile("openssl-", ".conf");
-                Files.copy(is, openSslConf.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
-                sna = addSubjectAltNames(openSslConf, sbj);
+                sna = buildConfigFile(sbj, true);
                 cmd.addAll(asList("-config", sna.toPath().toString(), "-extensions", "v3_req"));
             }
 
@@ -75,11 +72,6 @@ public class OpenSslCertManager implements CertManager {
         if (sna != null) {
             if (!sna.delete()) {
                 log.warn("{} cannot be deleted", sna.getName());
-            }
-        }
-        if (openSslConf != null) {
-            if (!openSslConf.delete()) {
-                log.warn("{} cannot be deleted", openSslConf.getName());
             }
         }
     }
@@ -97,9 +89,7 @@ public class OpenSslCertManager implements CertManager {
                     isTrustStore = new FileInputStream(trustStoreFile);
                 }
 
-                FileInputStream isCertificate = null;
-                try {
-                    isCertificate = new FileInputStream(certFile);
+                try (FileInputStream isCertificate = new FileInputStream(certFile)) {
 
                     CertificateFactory certFactory = CertificateFactory.getInstance("X.509");
                     X509Certificate certificate = (X509Certificate) certFactory.generateCertificate(isCertificate);
@@ -108,18 +98,8 @@ public class OpenSslCertManager implements CertManager {
                     trustStore.load(isTrustStore, trustStorePassword.toCharArray());
                     trustStore.setEntry(certAlias, new KeyStore.TrustedCertificateEntry(certificate), null);
 
-                    FileOutputStream osTrustStore = null;
-                    try {
-                        osTrustStore = new FileOutputStream(trustStoreFile);
+                    try (FileOutputStream osTrustStore = new FileOutputStream(trustStoreFile)) {
                         trustStore.store(osTrustStore, trustStorePassword.toCharArray());
-                    } finally {
-                        if (osTrustStore != null) {
-                            osTrustStore.close();
-                        }
-                    }
-                } finally {
-                    if (isCertificate != null) {
-                        isCertificate.close();
                     }
                 }
             } finally {
@@ -147,26 +127,14 @@ public class OpenSslCertManager implements CertManager {
             throws IOException, CertificateException, KeyStoreException, NoSuchAlgorithmException {
 
         try {
-            FileInputStream isTrustStore = null;
-            try {
-                isTrustStore = new FileInputStream(trustStoreFile);
+            try (FileInputStream isTrustStore = new FileInputStream(trustStoreFile)) {
                 KeyStore trustStore = KeyStore.getInstance("PKCS12");
                 trustStore.load(isTrustStore, trustStorePassword.toCharArray());
                 for (String alias : aliases) {
                     trustStore.deleteEntry(alias);
                 }
-                FileOutputStream osTrustStore = null;
-                try {
-                    osTrustStore = new FileOutputStream(trustStoreFile);
+                try (FileOutputStream osTrustStore = new FileOutputStream(trustStoreFile)) {
                     trustStore.store(osTrustStore, trustStorePassword.toCharArray());
-                } finally {
-                    if (osTrustStore != null) {
-                        osTrustStore.close();
-                    }
-                }
-            } finally {
-                if (isTrustStore != null) {
-                    isTrustStore.close();
                 }
             }
         } catch (IOException | CertificateException | KeyStoreException | NoSuchAlgorithmException e) {
@@ -176,44 +144,25 @@ public class OpenSslCertManager implements CertManager {
 
     @Override
     public void renewSelfSignedCert(File keyFile, File certFile, Subject sbj, int days) throws IOException {
-        // See https://serverfault.com/questions/306345/certification-authority-root-certificate-expiry-and-renewal
+        // See https://serverfault.com/a/501513
 
         //openssl req -new -key root.key -out newcsr.csr
-        File csrFile = File.createTempFile("renewal", ".csr");
+        File csrFile = Files.createTempFile("renewal", ".csr").toFile();
+
         List<String> cmd = new ArrayList<>(asList("openssl", "req",
                 "-new",
                 "-batch",
                 "-out", csrFile.getAbsolutePath(),
                 "-key", keyFile.getAbsolutePath()));
-
-        File sna = null;
-        File openSslConf = null;
         if (sbj != null) {
             if (sbj.subjectAltNames() != null && sbj.subjectAltNames().size() > 0) {
-
-                // subject alt names need to be in an openssl configuration file
-                InputStream is = getClass().getClassLoader().getResourceAsStream("openssl.conf");
-                openSslConf = File.createTempFile("openssl-", ".conf");
-                Files.copy(is, openSslConf.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
-                sna = addSubjectAltNames(openSslConf, sbj);
+                File sna = buildConfigFile(sbj, true);
                 cmd.addAll(asList("-config", sna.toPath().toString(), "-extensions", "v3_req"));
             }
             cmd.addAll(asList("-subj", sbj.toString()));
         }
 
         exec(cmd);
-
-        if (sna != null) {
-            if (!sna.delete()) {
-                log.warn("{} cannot be deleted", sna.getName());
-            }
-        }
-        if (openSslConf != null) {
-            if (!openSslConf.delete()) {
-                log.warn("{} cannot be deleted", openSslConf.getName());
-            }
-        }
 
         //openssl x509 -req -days 3650 -in newcsr.csr -signkey root.key -out newroot.pem
         List<String> cmd2 = new ArrayList<>(asList("openssl", "x509",
@@ -223,7 +172,15 @@ public class OpenSslCertManager implements CertManager {
                 "-signkey", keyFile.getAbsolutePath(),
                 "-out", certFile.getAbsolutePath()));
 
+        // subject alt names need to be in an openssl configuration file
+        File sna = buildConfigFile(sbj, true);
+        cmd2.addAll(asList("-extfile", sna.toPath().toString(), "-extensions", "v3_req"));
+
         exec(cmd2);
+
+        if (!sna.delete()) {
+            log.warn("{} cannot be deleted", sna.getName());
+        }
 
         if (!csrFile.delete()) {
             log.warn("{} cannot be deleted", csrFile.getName());
@@ -231,32 +188,32 @@ public class OpenSslCertManager implements CertManager {
     }
 
     /**
-     * Add subject alt names section to the provided openssl configuration file
+     * Add basic constraints and subject alt names section to the provided openssl configuration file
      *
-     * @param opensslConf openssl configuration file
      * @param sbj subject information
      * @return openssl configuration file with subject alt names added
      * @throws IOException
      */
-    private File addSubjectAltNames(File opensslConf, Subject sbj) throws IOException {
-
-        File sna = File.createTempFile("sna-", ".conf");
-        Files.copy(opensslConf.toPath(), sna.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
-        BufferedWriter out = null;
-        try {
-            out = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(sna, true), "UTF8"));
-            boolean newline = false;
-            for (Map.Entry<String, String> entry : sbj.subjectAltNames().entrySet()) {
-                if (newline) {
-                    out.append("\n");
-                }
-                out.append(entry.getKey()).append(" = ").append(entry.getValue());
-                newline = true;
+    private File buildConfigFile(Subject sbj, boolean isCa) throws IOException {
+        File sna = createDefaultConfig().toFile();
+        try (BufferedWriter out = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(sna, true), StandardCharsets.UTF_8))) {
+            if (isCa) {
+                out.append("basicConstraints = critical,CA:true,pathlen:0\n");
             }
-        } finally {
-            if (out != null) {
-                out.close();
+            if (sbj != null) {
+                if (sbj.subjectAltNames() != null && sbj.subjectAltNames().size() > 0) {
+                    out.append("subjectAltName = @alt_names\n" +
+                            "\n" +
+                            "[alt_names]\n");
+                    boolean newline = false;
+                    for (Map.Entry<String, String> entry : sbj.subjectAltNames().entrySet()) {
+                        if (newline) {
+                            out.append("\n");
+                        }
+                        out.append(entry.getKey()).append(" = ").append(entry.getValue());
+                        newline = true;
+                    }
+                }
             }
         }
 
@@ -270,17 +227,12 @@ public class OpenSslCertManager implements CertManager {
                 "-keyout", keyFile.getAbsolutePath(), "-out", csrFile.getAbsolutePath()));
 
         File sna = null;
-        File openSslConf = null;
         if (sbj != null) {
 
             if (sbj.subjectAltNames() != null && sbj.subjectAltNames().size() > 0) {
 
                 // subject alt names need to be in an openssl configuration file
-                InputStream is = getClass().getClassLoader().getResourceAsStream("openssl.conf");
-                openSslConf = File.createTempFile("openssl-", ".conf");
-                Files.copy(is, openSslConf.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
-                sna = addSubjectAltNames(openSslConf, sbj);
+                sna = buildConfigFile(sbj, false);
                 cmd.addAll(asList("-config", sna.toPath().toString(), "-extensions", "v3_req"));
             }
 
@@ -292,11 +244,6 @@ public class OpenSslCertManager implements CertManager {
         if (sna != null) {
             if (!sna.delete()) {
                 log.warn("{} cannot be deleted", sna.getName());
-            }
-        }
-        if (openSslConf != null) {
-            if (!openSslConf.delete()) {
-                log.warn("{} cannot be deleted", openSslConf.getName());
             }
         }
     }
@@ -319,17 +266,12 @@ public class OpenSslCertManager implements CertManager {
             "-out", crtFile.getAbsolutePath()));
 
         File sna = null;
-        File openSslConf = null;
         if (sbj != null) {
 
             if (sbj.subjectAltNames() != null && sbj.subjectAltNames().size() > 0) {
 
                 // subject alt names need to be in an openssl configuration file
-                InputStream is = getClass().getClassLoader().getResourceAsStream("openssl.conf");
-                openSslConf = File.createTempFile("openssl-", ".conf");
-                Files.copy(is, openSslConf.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
-                sna = addSubjectAltNames(openSslConf, sbj);
+                sna = buildConfigFile(sbj, false);
                 cmd.addAll(asList("-extfile", sna.toPath().toString(), "-extensions", "v3_req"));
             }
         }
@@ -341,23 +283,29 @@ public class OpenSslCertManager implements CertManager {
                 log.warn("{} cannot be deleted", sna.getName());
             }
         }
-        if (openSslConf != null) {
-            if (!openSslConf.delete()) {
-                log.warn("{} cannot be deleted", openSslConf.getName());
-            }
-        }
 
         // We need to remove CA serial file
-        Files.deleteIfExists(Paths.get(caCert.getPath().replace(".crt", ".srl")));
+        Path path = Paths.get(caCert.getPath().replaceAll(".[a-zA-Z0-9]+$", ".srl"));
+        if (Files.exists(path)) {
+            Files.delete(path);
+        }
+    }
+
+    private Path createDefaultConfig() throws IOException {
+        try (InputStream is = getClass().getClassLoader().getResourceAsStream("openssl.conf")) {
+            Path openSslConf = Files.createTempFile("openssl-", ".conf");
+            Files.copy(is, openSslConf, StandardCopyOption.REPLACE_EXISTING);
+            return openSslConf;
+        }
     }
 
     @Override
     public void generateCert(File csrFile, byte[] caKey, byte[] caCert, File crtFile, Subject sbj, int days) throws IOException {
 
-        File caKeyFile = File.createTempFile("ca-key-", ".key");
+        File caKeyFile = Files.createTempFile("ca-key-", ".key").toFile();
         Files.write(caKeyFile.toPath(), caKey);
 
-        File caCertFile = File.createTempFile("ca-crt-", ".crt");
+        File caCertFile = Files.createTempFile("ca-crt-", ".crt").toFile();
         Files.write(caCertFile.toPath(), caCert);
 
         generateCert(csrFile, caKeyFile, caCertFile, crtFile, sbj, days);
@@ -375,7 +323,7 @@ public class OpenSslCertManager implements CertManager {
 
         try {
 
-            out = File.createTempFile("openssl-", Integer.toString(cmd.hashCode()));
+            out = Files.createTempFile("openssl-", Integer.toString(cmd.hashCode())).toFile();
 
             ProcessBuilder processBuilder = new ProcessBuilder(cmd)
                     .redirectOutput(out)
@@ -389,7 +337,7 @@ public class OpenSslCertManager implements CertManager {
             outputStream.close();
 
             int result = proc.waitFor();
-            String stdout = new String(Files.readAllBytes(out.toPath()), Charset.defaultCharset());
+            String stdout = Files.readString(out.toPath(), Charset.defaultCharset());
 
             log.debug(stdout);
             log.debug("result {}", result);
